<resources>
    <!--APP-->
    <string name="app_name">BakingApp</string>

    <!--WIDGET-->
    <string name="widget_btn_previous">previous</string>
    <string name="widget_btn_next">next</string>
    <string name="widget_message_ingredients_not_available">Ingredients not available</string>
    <string name="widget_content_description_recipe_image">recipe image</string>

    <!--WIDGET ITEM INGREDIENT-->
    <string name="widget_item_ingredient_name_label">name</string>
    <string name="widget_item_ingredient_quantity_label">quantity</string>
    <string name="widget_item_ingredient_measure_label">measure</string>

    <!--WIDGET SMALL-->
    <string name="widget_small_label_recipe">Recipe :</string>
    <string name="widget_small_label_ingredients_number">Ingredients :</string>
    <string name="widget_small_label_steps_number">Steps :</string>
    <string name="widget_small_content_description_recipe_image">recipe image</string>

    <!--WIDGET EMPTY VIEW-->
    <string name="widget_empty_view_content_description_recipe_image">recipe image</string>

    <!--ITEM STEP-->
    <string name="item_step_content_description_step_image">content_description_step_image</string>

    <!--ITEM RECIPE-->
    <string name="item_recipe_servings_label">Servings :</string>
    <string name="item_recipe_steps_label">Steps :</string>
    <string name="item_recipe_ingredients_label">Ingredients :</string>
    <string name="item_recipe_content_description_recipe_image">image of the recipe</string>

    <!--ITEM INGREDIENT-->
    <string name="item_ingredient_name_label">Name :</string>
    <string name="item_ingredient_quantity_label">Quantity :</string>
    <string name="item_ingredient_measure_label">Measure :</string>

    <!--ACTIVITY SELECT_STEP-->
    <string name="activity_select_step_label_servings">Servings :</string>
    <string name="activity_select_step_btn_show_ingredients">Show Ingredients</string>

    <!--ACTIVITY STEP_DETAIL-->
    <string name="activity_details_btn_next">Next</string>
    <string name="activity_details_btn_previous">Previous</string>

    <!--ACTIVITY SELECT_RECIPE-->
    <string name="activity_select_recipe_toast_failed_to_fetch_data">Failed to fetch data! Check your internet connection</string>
    <string name="activity_select_recipe_emptyview_message">Recipes not available, check your internet connection</string>
    <string name="activity_select_recipe_btn_tryagain">Try Again</string>

    <!--FRAGMENTS-->
    <string name="fragment_step_detail_content_description_step_image">step image</string>
    <string name="fragment_step_detail_btn_fullscreen">Full Screen</string>
    <string name="menu_catalog">catalog</string>


</resources>
