<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellowLight"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/widget_small_btn_appwidget_previous"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/widget_btn_previous"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/widget_small_btn_appwidget_next"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/widget_btn_next"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrLyt_for_pendingIntent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/appwidget_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:layout_marginStart="36dp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/appwidget_recipe_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:layout_marginStart="64dp"
                android:layout_toEndOf="@+id/appwidget_recipe_name"
                android:contentDescription="@string/widget_content_description_recipe_image" />
        </RelativeLayout>

        <ListView
            android:id="@+id/widget_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorOrangeLight"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/widget_message_ingredients_not_available"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>