<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    cardview:cardCornerRadius="2dp"
    cardview:cardElevation="3dp"
    cardview:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorYellowLight">
        <!--This TextView contains the name of the recipe-->
        <TextView
            android:id="@+id/recipeItem_txtVw_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipeItem_txtVw_recipe_name"
            android:orientation="horizontal">
            <!--This ImageView contains an illustration of the recipe or a placeholder-->
            <ImageView
                android:id="@+id/imgVw_recipe_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/item_recipe_content_description_recipe_image"
                android:scaleType="centerCrop"
                android:src="@drawable/recipe_placeholder" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:text="@string/item_recipe_servings_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <!--This TextView contains the serving of the recipe-->
                    <TextView
                        android:id="@+id/selectStepActivity_txtVw_recipe_serving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:text="@string/item_recipe_steps_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <!--This TextView contains the number of steps necessary to complete the recipe.-->
                    <TextView
                        android:id="@+id/txtVw_recipe_steps_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:text="@string/item_recipe_ingredients_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <!--This TextView contains the number of ingredients for the recipe.-->
                    <TextView
                        android:id="@+id/txtVw_recipe_ingredients_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>

